Added new fields to Starter Template Form

--- a/src/app/starterTemplateForm/starterTemplateForm.component.html
+++ b/src/app/starterTemplateForm/starterTemplateForm.component.html
@@ -1,20 +1,56 @@
 <h1>Customer Edit</h1>
+
 <form #starterForm="ngForm" (ngSubmit)="onSubmit()">
-    First Name: <input type="text" class="form-control"
-                       name="firstName" 
-                       #firstName="ngModel"
-                       [(ngModel)]="customer.firstName"
-                       required />
-    <br />
+  <label>First Name:</label>
+  <input type="text" class="form-control" name="firstName" #firstName="ngModel" [(ngModel)]="customer.firstName" required />
+
+  <label>Last Name:</label>
+  <input type="text" class="form-control" name="lastName" #lastName="ngModel" [(ngModel)]="customer.lastName" required />
+
+  <label>Address:</label>
+  <input type="text" class="form-control" name="address" #address="ngModel" [(ngModel)]="customer.address" required />
+
+  <label>City:</label>
+  <input type="text" class="form-control" name="city" #city="ngModel" [(ngModel)]="customer.city" required />
+
+  <label>Province:</label>
+  <input type="text" class="form-control" name="province" #province="ngModel" [(ngModel)]="customer.province" required />
+
+  <label>Country:</label>
+  <input type="text" class="form-control" name="country" #country="ngModel" [(ngModel)]="customer.country" required />
+
+  <label>Postal Code:</label>
+  <input type="text" class="form-control" name="postalCode" #postalCode="ngModel" [(ngModel)]="customer.postalCode" required />
+
+  <label>Phone Number:</label>
+  <input type="text" class="form-control" name="phoneNumber" #phoneNumber="ngModel" [(ngModel)]="customer.phoneNumber" required />
+
+  <label>Email:</label>
+  <input type="email" class="form-control" name="email" #email="ngModel" [(ngModel)]="customer.email" required email/>
+
+  <br>
+
+  <div class="error-container">
     <span *ngIf="!firstName.valid">First Name is required!</span>
-    <br />
-    <button class="btn btn-default" [disabled]="!starterForm.valid">Submit</button>
-    <br /><br />
-    {{ message }}
-    <br />
-    Valid: {{ firstName.valid}}
-    <br />
-    Pristine: {{ firstName.pristine }}
-    <br />
-    Touched: {{ firstName.touched }}
+    <span *ngIf="!lastName.valid">Last Name is required!</span>
+    <span *ngIf="!address.valid">Address is required!</span>
+    <span *ngIf="!city.valid">City is required!</span>
+    <span *ngIf="!province.valid">Province is required!</span>
+    <span *ngIf="!country.valid">Country is required!</span>
+    <span *ngIf="!postalCode.valid">Postal Code is required!</span>
+    <span *ngIf="!phoneNumber.valid">Phone Number is required!</span>
+    <span *ngIf="!email.valid">Email is required!</span>
+  </div>
+
+  <button class="btn btn-default" [disabled]="!starterForm.valid">Submit</button>
+  <br /><br />
+
+  <div [innerHTML]="message"></div>
+
+  <br />
+  Valid: {{ firstName.valid }}
+  <br />
+  Pristine: {{ firstName.pristine }}
+  <br />
+  Touched: {{ firstName.touched }}
 </form>
